--- a/admin_back_office/assets/css/main.css
+++ b/admin_back_office/assets/css/main.css
@@ -139,3 +139,25 @@ footer {
   /*background: #fff;*/
   padding: 10px 0;
 }
+
+
+
+/* login  */
+.card-login {
+  margin-top: 300px !important;
+}
+
+/* input  */
+input,
+select,
+textarea {
+  border-radius: 0 !important;
+  border: 2px solid #eee !important;
+}
+input:focus,
+select:focus,
+textarea:focus {
+  transition: all .75s;
+  box-shadow: none !important;
+  border: 2px solid #27a9b9 !important;
+}
